gitops/apps/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: shows
              mountPath: /shows
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: shows
          persistentVolumeClaim:
            claimName: pvc-sonarr-media-shows
        - name: downloads
          persistentVolumeClaim:
            claimName: pvc-sonarr-media-downloads
